--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -59,7 +59,7 @@
             </a>
             <ul class="treeview-menu">
                 <li>
-                    <a href="@Url.Action("Index", "Departments")"><i class="fa fa-user"></i> <span>ข้อมูลรายวิชา</span></a>
+                    <a href="@Url.Action("Index", "Departments")"><i class="fa fa-user"></i> <span>ข้อมูลหมวดวิชา</span></a>
                 </li>
                 <li>
                     <a href="@Url.Action("Index", "Courses")"><i class="fa fa-user"></i> <span>ข้อมูลหลักสูตร</span></a>
@@ -75,9 +75,6 @@
                 </span>
             </a>
             <ul class="treeview-menu">
-                <li>
-                    <a href="@Url.Action("Index", "Departments")"><i class="fa fa-address-book"></i> <span>รายวิชา</span></a>
-                </li>
                 <li><a href="#">ข้อมูลนักศึกษา</a></li>
                 <li><a href="#">โรงเรียนเดิมของนักศึกษา</a></li>
                 <li><a href="#">ข้อมูลศิษย์เก่า</a></li>
