--- a/CSManagement/CSManagement/Views/Departments/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Departments/Create.cshtml
@@ -23,7 +23,7 @@
             <div class="box-body">
                 <div class="row">
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.Dep_CourseID, htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Dep_CourseID,"ชื่อหลักสูตร", htmlAttributes: new { @class = "control-label" })
                         @Html.DropDownList("Dep_CourseID", null, "กรุณาเลือกหลักสูตร", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Dep_CourseID, "", new { @class = "text-danger" })
                     </div>
