--- a/CSManagement/CSManagement/Views/Histories/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Histories/Create.cshtml
@@ -1,32 +1,33 @@
-﻿@model CSManagement.Models.History
+﻿@using System.Web.UI.WebControls
+@model CSManagement.Models.History
 
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>เพิ่มประวัติการทำงาน</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>History</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
-            @Html.LabelFor(model => model.HIS_StuID, "HIS_StuID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("HIS_StuID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.LabelFor(model => model.HIS_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.HIS_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name" } })
                 @Html.ValidationMessageFor(model => model.HIS_StuID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HIS_Job, "HIS_Job", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.LabelFor(model => model.HIS_Job, "ประเภทงานที่ทำ", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
                 @Html.DropDownList("HIS_Job", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.HIS_Job, "", new { @class = "text-danger" })
             </div>
@@ -34,7 +35,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.HIS_Jobname, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.HIS_Jobname, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HIS_Jobname, "", new { @class = "text-danger" })
             </div>
@@ -42,15 +43,15 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.HIS_Year, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.HIS_Year, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.HIS_Year, new { htmlAttributes = new { @class = "form-control",@PlaceHolder = "ใส่เฉพาะปี(จำไม่ได้ไม่ต้องใส่)" } })
                 @Html.ValidationMessageFor(model => model.HIS_Year, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.HIS_Company, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.HIS_Company, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HIS_Company, "", new { @class = "text-danger" })
             </div>
@@ -71,3 +72,29 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
+<script>
+    $("#Stu_Name").autocomplete({
+        source: function(request, response) {
+            $.ajax({
+                url: '@Url.Action("GetSearchValue","Histories")',
+                dataType: "json",
+                data: { search: $("#Stu_Name").val() },
+                success: function(data) {
+                    response($.map(data,
+                        function(item) {
+                            return { label: item.Stu_Name, value: item.Stu_ID };
+                        }));
+                },
+                error: function(xhr, status, error) {
+                    alert("Error");
+                }
+            });
+        }
+    });
+</script>
