--- a/CSManagement/CSManagement/Views/Histories/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Histories/Index.cshtml
@@ -25,7 +25,7 @@
             @Html.DisplayNameFor(model => model.Job.JOB_Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Student.Stu_Title)
+            @Html.DisplayNameFor(model => model.Student.Stu_Name)
         </th>
         <th></th>
     </tr>
@@ -45,7 +45,7 @@
             @Html.DisplayFor(modelItem => item.Job.JOB_Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Student.Stu_Title)
+            @Html.DisplayFor(modelItem => item.Student.Stu_Name)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.HIS_ID }) |
