แก้สัดส่วนทำงาน+เพิ่มประวัติการทำงาน นศ.

--- a/CSManagement/CSManagement/Views/ComputerEquipments/Details.cshtml
+++ b/CSManagement/CSManagement/Views/ComputerEquipments/Details.cshtml
@@ -110,8 +110,8 @@
 
                         <tbody>
                             <tr>
-                                <td>@(i++)</td>
-                                <td>@Html.DisplayFor(model => model.CE_Name)</td>
+                                <td style="text-align:center">@(i++)</td>
+                                <td style="text-align:center">@Html.DisplayFor(model => model.CE_Name)</td>
                                 <td style="text-align:center">@Html.DisplayFor(model => model.CE_Noce)</td>
                                 <td style="text-align:center">@Html.DisplayFor(model => model.CE_Piece)</td>
                                 <td style="text-align:right">@Html.DisplayFor(model => model.CE_Price)</td>
