--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -32,6 +32,9 @@
                 <li>
                     <a href="@Url.Action("Index", "Histories")"><i class="fa fa-user"></i> <span>จัดการประวัติการทำงาน</span></a>
                 </li>
+                <li>
+                    <a href="@Url.Action("Index", "Schools")"><i class="fa fa-user"></i> <span>จัดการโรงเรียนเดิมของนักศึกษา</span></a>
+                </li>
             </ul>
         </li>
         <li class="@Url.IsLinkActive("Index", "Teachers")">
@@ -86,8 +89,6 @@
                 </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="#">ข้อมูลนักศึกษา</a></li>
-                <li><a href="#">โรงเรียนเดิมของนักศึกษา</a></li>
                 <li><a href="#">ข้อมูลศิษย์เก่า</a></li>
             </ul>
         </li>
