--- a/CSManagement/CSManagement/Views/Students/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model CSManagement.Models.Student
+﻿@using CSManagement.Models
+@using Microsoft.Ajax.Utilities
+@model CSManagement.Models.Student
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -65,6 +67,49 @@
                         <th>@Html.DisplayNameFor(model => model.Status.Status_Name)</th>
                         <td>@Html.DisplayFor(model => model.Status.Status_Name)</td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+
+
+        <div class="box-header with-border">
+
+            <div class="row">
+                <div class="col-md-10">
+                    <h1 class="box-title">ประวัติการทำงาน</h1>
+                    <div style="float:right">
+                        <a class="btn btn-default" href="@Url.Action("Create", "Histories")"><i class="fa fa-edit"></i> เพิ่มประวัติการทำงาน</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="box-body">
+            <table class="table table-striped table-bordered detail-view" style="font-size: 18px">
+                <thead>
+                    <tr>
+                        <th>ประเภทอาชีพ</th>
+                        <th>อาชีพ</th>
+                        <th>ชื่อบริษัท</th>
+                        <th>ปีที่เข้าทำงาน</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{
+                        if (Session["HistoryStu"] != null)
+                        {
+                            var list = (List<History>)Session["HistoryStu"];
+                            foreach (var item in list)
+                            {
+                                <tr>
+                                    <td>@item.Job.JOB_Name</td>
+                                    <td>@item.HIS_Jobname</td>
+                                    <td>@item.HIS_Company</td>
+                                    <td>@item.HIS_Year</td>
+                                </tr>
+                            }
+                        }
+                    }
                 </tbody>
             </table>
         </div>
