--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -41,7 +41,7 @@
             <a href="@Url.Action("Index", "Teachers")"><i class="fa fa-user"></i> <span>จัดการข้อมูลอาจารย์</span></a>
         </li>
         <li>
-            <a href="#"><i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลปริญญานิพนธ์</span></a>
+            <a href="@Url.Action("Index", "Projects")"><i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลปริญญานิพนธ์</span></a>
         </li>
 
         <li class="treeview">
