รูปประชาสัมพันธ์+ลิ้งค์สมัครเรียน

--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -58,6 +58,12 @@
                 <li>
                     <a href="@Url.Action("Index", "Courses")"><i class="fa fa-user"></i> <span>ข้อมูลหลักสูตร</span></a>
                 </li>
+                <li>
+                    <a href="@Url.Action("Index", "Pictures")"><i class="fa fa-user"></i> <span>รูปภาพประชาสัมพันธ์</span></a>
+                </li>
+                <li>
+                    <a href="@Url.Action("Index", "RegisterLinks")"><i class="fa fa-user"></i> <span>เว็ปสมัครเรียน</span></a>
+                </li>
             </ul>
         </li>
 
